# speedtime

./: .gitignore  LICENSE  Tupfile  build.sh  compile_flags.txt  compiler_flags.txt  default.nix  make.sh  meson.build  readme.md  result  shell.nix  speedtime.1
extras/: speedtime.1  speedtime.1.in  speedtime.desktop
src/: compile_settings.h  config.def.h  getKeyEventFile.c  getKeyEventFile.h  keyboard.c  keyboard.h  keyboard_events.c  keyboard_events.h  main.c  speedtime.c  speedtime.h  splits.c  splits.h  structs.h  timing.c  timing.h  utils.c  utils.h
